# global-hackathon-v1

./: .hackathon-start
backend/: .env.example  .gitignore  app.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01_memory_spaces.py  02_family_members.py  03_conversation_sessions.py  04_conversation_messages.py  05_stories.py
backend/src/: app.py
backend/src/config/: settings.py
backend/src/database/: models.py  postgres.py
backend/src/libs/: config.py  utils.py
backend/src/libs/conversation_agent/: agent.py
backend/src/libs/story_agent/: agent.py
backend/src/middleware/: error_handler.py
backend/src/models/: __init__.py  conversation_message.py  conversation_session.py  family_member.py  memory_space.py  story.py
backend/src/services/__base/: acquire.py  manager.py
backend/src/services/conversations/: __init__.py  schema.py  service.py
backend/src/services/memory_spaces/: __init__.py  schema.py  service.py
backend/src/services/stories/: __init__.py  schema.py  service.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/blogs/: page.tsx
frontend/components/: ConfirmationModal.tsx  InlineMarkdown.tsx  MarkdownRenderer.tsx  SignInModal.tsx
frontend/components/landing/: CTASection.tsx  ExampleStories.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navigation.tsx  ProblemStatement.tsx
frontend/components/ui/: input.tsx  label.tsx  (+1 more)
frontend/hooks/: useScrollAnimation.ts  useSpeechRecognition.ts  useTypingAnimation.ts
(+8 files in other folders)
