[project]
name = "evermore-backend"
version = "0.1.0"
description = "evermore FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "openai",
    "google-genai",
    "agno",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.1.0"
]

